Update Day 2 and Day 3 materials: restructure BI/ML integrations, refine notebooks

--- a/00_setup.ipynb
+++ b/00_setup.ipynb
@@ -101,6 +101,7 @@
     "BRONZE_SCHEMA = \"bronze\"\n",
     "SILVER_SCHEMA = \"silver\"\n",
     "GOLD_SCHEMA   = \"gold\"\n",
+    "ISOLATION_MODE = \"Catalog\"\n",
     "\n",
     "\n",
     " #Dla Databricks środowiska - Unity Catalog Volume:\n",
