--- a/DZIEN_2_Lakehouse_Delta_Lake/04_medallion_architecture.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/04_medallion_architecture.ipynb
@@ -16,20 +16,32 @@
     }
    },
    "source": [
-    "# Medallion Architecture: Bronze → Silver → Gold Pipeline - Demo\n",
+    "# 04_medallion_architecture\n",
     "\n",
-    "**Cel szkoleniowy:** Praktyczna implementacja architektury medalionowej z transformacjami Bronze/Silver/Gold oraz technikami SCD (Slowly Changing Dimensions).\n",
+    "## Opis\n",
+    "Ten notebook demonstruje implementację **Medallion Architecture** (Bronze → Silver → Gold) w Databricks.\n",
+    "Przejdziemy przez pełny cykl życia danych: od surowych plików (Bronze), przez czyszczenie i deduplikację (Silver), aż po agregaty biznesowe (Gold).\n",
     "\n",
-    "**Zakres tematyczny:**\n",
-    "- Medallion Architecture - pełny pipeline\n",
-    "- Bronze Layer - raw data landing\n",
-    "- Silver Layer - cleansing, deduplication, validation\n",
-    "- Gold Layer - business aggregates, dimensional models\n",
-    "- SCD Type 1 - overwrite changes\n",
-    "- SCD Type 2 - historical tracking\n",
-    "- CDC (Change Data Capture) patterns\n",
-    "- Data quality checks\n",
-    "- Audit & lineage metadata"
+    "## Agenda\n",
+    "1. **Wstęp teoretyczny**: Czym jest Medallion Architecture?\n",
+    "2. **Bronze Layer**: Ingestion surowych danych (CSV, JSON, Parquet).\n",
+    "3. **Silver Layer**: Data Quality, Deduplication & Validation.\n",
+    "4. **SCD (Slowly Changing Dimensions)**: Implementacja SCD Type 1 i Type 2.\n",
+    "5. **Gold Layer**: Agregacje biznesowe i Star Schema.\n",
+    "6. **Best Practices**: Partycjonowanie, Z-Ordering, Data Retention.\n",
+    "\n",
+    "## Informacje o Notebooku\n",
+    "- **Dzień szkolenia**: Dzień 2 - Delta Lake & Lakehouse Architecture\n",
+    "- **Typ notebooka**: Demo + Implementation\n",
+    "- **Wymagania techniczne**:\n",
+    "  - Databricks Runtime 13.0+ (zalecane: 14.3 LTS)\n",
+    "  - Unity Catalog włączony\n",
+    "  - Uprawnienia: CREATE TABLE, CREATE SCHEMA, SELECT, MODIFY\n",
+    "  - Klaster: Standard z minimum 2 workers\n",
+    "- **Zależności**: \n",
+    "  - Wykonany notebook 01_delta_lake_operations.ipynb (dla zrozumienia podstaw Delta Lake)\n",
+    "  - *Notebook jest niezależny w zakresie danych (ładuje własne dane do Bronze)*\n",
+    "- **Czas realizacji**: ~90 minut"
    ]
   },
   {
@@ -557,12 +569,12 @@
     "\n",
     "### Bronze Tables - Struktura\n",
     "\n",
-    "Dla naszego demo użyjemy danych, które zostały już załadowane w poprzednich notebookach (02_batch_data_ingestion.ipynb i 03_streaming_data_ingestion.ipynb).\n",
+    "W tym demo załadujemy dane bezpośrednio z plików źródłowych (CSV, JSON, Parquet) do warstwy Bronze, aby zapewnić niezależność tego notebooka.\n",
     "\n",
     "**Tabele Bronze:**\n",
-    "- `bronze.customers_raw` - dane klientów\n",
-    "- `bronze.orders_raw` - zamówienia\n",
-    "- `bronze.products_raw` - produkty\n",
+    "- `bronze.customers_raw` - dane klientów (CSV)\n",
+    "- `bronze.orders_raw` - zamówienia (JSON)\n",
+    "- `bronze.products_raw` - produkty (Parquet)\n",
     "\n",
     "### Dlaczego Bronze jest Ważny?\n",
     "\n",
@@ -614,34 +626,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "e68753ed-8a49-491d-ad72-d1f64520217e",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Convert SQL table creation to PySpark DataFrame write operations\n",
+    "### Przykład 1.1: Ingestion do Bronze Layer (Raw Data)\n",
     "\n",
-    "customers_df = spark.table(f\"{CATALOG}.{BRONZE_SCHEMA}.customers_batch\")\n",
-    "customers_df.write.mode(\"overwrite\").saveAsTable(f\"{CATALOG}.{BRONZE_SCHEMA}.customers_raw\")\n",
+    "Wczytujemy dane bezpośrednio z plików źródłowych (CSV, JSON, Parquet) do tabel Bronze.\n",
+    "Dzięki temu notebook jest niezależny od poprzednich kroków."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Load Customers (CSV)\n",
+    "customers_path = f\"{DATASET_BASE_PATH}/customers/customers.csv\"\n",
+    "print(f\"Reading from: {customers_path}\")\n",
     "\n",
-    "orders_df = spark.table(f\"{CATALOG}.{BRONZE_SCHEMA}.orders_batch\")\n",
-    "orders_df.write.mode(\"overwrite\").saveAsTable(f\"{CATALOG}.{BRONZE_SCHEMA}.orders_raw\")\n",
+    "customers_df = (spark.read\n",
+    "    .format(\"csv\")\n",
+    "    .option(\"header\", \"true\")\n",
+    "    .option(\"inferSchema\", \"true\") # In Bronze we often infer or use string\n",
+    "    .load(customers_path)\n",
+    ")\n",
     "\n",
-    "products_df = spark.table(f\"{CATALOG}.{BRONZE_SCHEMA}.products_batch\")\n",
-    "products_df.write.mode(\"overwrite\").saveAsTable(f\"{CATALOG}.{BRONZE_SCHEMA}.products_raw\")"
+    "display(customers_df.limit(5))"
    ]
   },
   {
@@ -650,7 +661,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "customers_df.write.mode(\"overwrite\").saveAsTable(f\"{CATALOG}.{BRONZE_SCHEMA}.customers_raw\")"
+    "# 3. Load Products (Parquet)\n",
+    "products_path = f\"{DATASET_BASE_PATH}/products/products.parquet\"\n",
+    "print(f\"Reading from: {products_path}\")\n",
+    "\n",
+    "products_df = (spark.read\n",
+    "    .format(\"parquet\")\n",
+    "    .load(products_path)\n",
+    ")\n",
+    "\n",
+    "# Write to Bronze\n",
+    "(products_df.write\n",
+    "    .format(\"delta\")\n",
+    "    .mode(\"overwrite\")\n",
+    "    .saveAsTable(\"bronze.products_raw\")\n",
+    ")\n",
+    "\n",
+    "print(\"Table bronze.products_raw created/overwritten.\")"
    ]
   },
   {
@@ -659,7 +686,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orders_df = spark.table(f\"{CATALOG}.{BRONZE_SCHEMA}.orders_batch\")"
+    "# 2. Load Orders (JSON)\n",
+    "orders_path = f\"{DATASET_BASE_PATH}/orders/orders_batch.json\"\n",
+    "print(f\"Reading from: {orders_path}\")\n",
+    "\n",
+    "orders_df = (spark.read\n",
+    "    .format(\"json\")\n",
+    "    .load(orders_path)\n",
+    ")\n",
+    "\n",
+    "# Write to Bronze\n",
+    "(orders_df.write\n",
+    "    .format(\"delta\")\n",
+    "    .mode(\"overwrite\")\n",
+    "    .saveAsTable(\"bronze.orders_raw\")\n",
+    ")\n",
+    "\n",
+    "print(\"Table bronze.orders_raw created/overwritten.\")"
    ]
   },
   {
@@ -668,25 +711,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orders_df.write.mode(\"overwrite\").saveAsTable(f\"{CATALOG}.{BRONZE_SCHEMA}.orders_raw\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "products_df = spark.table(f\"{CATALOG}.{BRONZE_SCHEMA}.products_batch\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "products_df.write.mode(\"overwrite\").saveAsTable(f\"{CATALOG}.{BRONZE_SCHEMA}.products_raw\")"
+    "# Write to Bronze (Overwrite for full load simulation)\n",
+    "(customers_df.write\n",
+    "    .format(\"delta\")\n",
+    "    .mode(\"overwrite\")\n",
+    "    .saveAsTable(\"bronze.customers_raw\")\n",
+    ")\n",
+    "\n",
+    "print(\"Table bronze.customers_raw created/overwritten.\")"
    ]
   },
   {
@@ -723,7 +755,7 @@
     "# Definiowanie tabel Bronze do sprawdzenia\n",
     "bronze_tables = [\"customers_raw\", \"orders_raw\", \"products_raw\"]\n",
     "\n",
-    "# Sprawdź czy tabele Bronze istnieją (z poprzednich notebooków)\n",
+    "# Sprawdź utworzone tabele\n",
     "for table in bronze_tables:\n",
     "    full_table = f\"{CATALOG}.{BRONZE_SCHEMA}.{table}\"\n",
     "    \n",
@@ -743,8 +775,7 @@
     "        display(df.limit(1))\n",
     "        print()\n",
     "    else:\n",
-    "        print(f\"⚠️  {table} - nie istnieje\")\n",
-    "        print(f\"   Uruchom najpierw notebooki 02 i 03 aby załadować dane do Bronze\\n\")\n",
+    "        print(f\"⚠️  {table} - nie istnieje (Błąd: Tabela powinna zostać utworzona w poprzednim kroku)\")\n",
     "\n",
     "print(\"-\" * 70)\n",
     "print(\"\\n💡 Bronze Layer zawiera RAW data bez transformacji\")\n",
