--- a/DZIEN_2_Lakehouse_Delta_Lake/05_optimization_best_practices.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/05_optimization_best_practices.ipynb
@@ -181,25 +181,29 @@
     "from pyspark.sql.types import *\n",
     "import time\n",
     "\n",
-    "# Wyświetl kontekst użytkownika\n",
-    "print(\"=== Kontekst użytkownika ===\")\n",
+    "# Ustaw katalog i schemat jako domyślne\n",
+    "spark.sql(f\"USE CATALOG {CATALOG}\")\n",
+    "spark.sql(f\"USE SCHEMA {BRONZE_SCHEMA}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Kontekst użytkownika:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(f\"Katalog: {CATALOG}\")\n",
     "print(f\"Schema Bronze: {BRONZE_SCHEMA}\")\n",
     "print(f\"Schema Silver: {SILVER_SCHEMA}\")\n",
     "print(f\"Schema Gold: {GOLD_SCHEMA}\")\n",
-    "print(f\"Użytkownik: {raw_user}\")\n",
-    "\n",
-    "# Ustaw katalog i schemat jako domyślne\n",
-    "spark.sql(f\"USE CATALOG {CATALOG}\")\n",
-    "spark.sql(f\"USE SCHEMA {BRONZE_SCHEMA}\")\n",
-    "\n",
-    "# Nazwy tabel (założenie: notebook 01_delta_lake_operations został wykonany)\n",
-    "CUSTOMERS_DELTA = f\"{BRONZE_SCHEMA}.customers_delta\"\n",
-    "ORDERS_DELTA = f\"{BRONZE_SCHEMA}.orders_delta\"\n",
-    "\n",
-    "print(f\"\\n=== Tabele do optymalizacji ===\")\n",
-    "print(f\"Customers: {CUSTOMERS_DELTA}\")\n",
-    "print(f\"Orders: {ORDERS_DELTA}\")"
+    "print(f\"Użytkownik: {raw_user}\")"
    ]
   },
   {
@@ -255,8 +259,22 @@
    "outputs": [],
    "source": [
     "CUSTOMERS_DELTA = f\"{BRONZE_SCHEMA}.customers_delta\"\n",
-    "ORDERS_DELTA = f\"{BRONZE_SCHEMA}.orders_delta\"\n",
-    "\n",
+    "ORDERS_DELTA = f\"{BRONZE_SCHEMA}.orders_delta\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Weryfikacja nazw tabel:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(f\"Customers: {CUSTOMERS_DELTA}\")\n",
     "print(f\"Orders: {ORDERS_DELTA}\")"
    ]
@@ -337,7 +355,6 @@
     "# Użyj tabeli customers_delta utworzonej w 01_delta_lake_operations.ipynb\n",
     "# CUSTOMERS_DELTA jest już zdefiniowany w sekcji Konfiguracja\n",
     "\n",
-    "print(\"=== Podstawowy plan zapytania ===\")\n",
     "simple_query = spark.sql(f\"\"\"\n",
     "    SELECT customer_id, first_name, last_name, customer_segment, city\n",
     "    FROM {CUSTOMERS_DELTA}\n",
@@ -345,6 +362,22 @@
     "    ORDER BY customer_id DESC\n",
     "    LIMIT 10\n",
     "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Podstawowy plan zapytania:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simple_query.explain()"
    ]
   },
   {
@@ -423,21 +456,29 @@
     "# Użyj tabeli orders_delta utworzonej w 01_delta_lake_operations.ipynb\n",
     "# ORDERS_DELTA jest już zdefiniowany w sekcji Konfiguracja\n",
     "\n",
-    "print(\"=== Zapytanie z filtrami (predicate pushdown) ===\")\n",
     "filtered_query = spark.sql(f\"\"\"\n",
     "    SELECT order_id, customer_id, total_amount, order_date\n",
     "    FROM {ORDERS_DELTA}\n",
     "    WHERE total_amount > 100 \n",
     "    AND order_date >= '2024-01-01'\n",
-    "\"\"\")\n",
-    "\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sprawdź plan - poszukaj \"PushedFilters\" w planie:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Sprawdź plan - poszukaj \"PushedFilters\" w planie\n",
-    "filtered_query.explain(True)\n",
-    "\n",
-    "print(\"\\n💡 Znajdź w planie:\")\n",
-    "print(\"- 'PushedFilters' - filtry przepchnięte do poziomu czytania\")\n",
-    "print(\"- 'ReadSchema' - tylko wybrane kolumny (column pruning)\")\n",
-    "print(\"- 'PartitionFilters' - filtry na partycjach\")"
+    "filtered_query.explain(True)"
    ]
   },
   {
@@ -607,8 +648,6 @@
     "# Utwórz tabelę partycjonowaną według roku i miesiąca\n",
     "ORDERS_PARTITIONED = f\"{BRONZE_SCHEMA}.orders_partitioned\"\n",
     "\n",
-    "print(\"=== Tworzenie tabeli partycjonowanej ===\")\n",
-    "\n",
     "# Dodaj kolumny do partycjonowania\n",
     "orders_with_partitions = spark.sql(f\"\"\"\n",
     "    SELECT \n",
@@ -616,8 +655,22 @@
     "        YEAR(order_date) as year,\n",
     "        MONTH(order_date) as month\n",
     "    FROM {ORDERS_DELTA}\n",
-    "\"\"\")\n",
-    "\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Zapisz jako tabelę partycjonowaną:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Zapisz jako tabelę partycjonowaną\n",
     "orders_with_partitions.write \\\n",
     "    .format(\"delta\") \\\n",
@@ -625,8 +678,22 @@
     "    .partitionBy(\"year\", \"month\") \\\n",
     "    .saveAsTable(ORDERS_PARTITIONED)\n",
     "\n",
-    "print(f\"✓ Tabela {ORDERS_PARTITIONED} utworzona z partycjonowaniem według roku i miesiąca\")\n",
-    "\n",
+    "print(f\"✓ Tabela {ORDERS_PARTITIONED} utworzona z partycjonowaniem według roku i miesiąca\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sprawdź strukturę partycji:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Sprawdź strukturę partycji\n",
     "spark.sql(f\"DESCRIBE DETAIL {ORDERS_PARTITIONED}\").select(\"name\", \"location\", \"partitionColumns\").show(truncate=False)"
    ]
@@ -670,20 +737,44 @@
    "source": [
     "# Przykład 2.2 - Partition Pruning\n",
     "\n",
-    "print(\"=== Zapytanie wykorzystujące partition pruning ===\")\n",
-    "\n",
     "# Zapytanie który wykorzystuje partycje (rok/miesiąc)\n",
     "efficient_query = spark.sql(f\"\"\"\n",
     "    SELECT order_id, customer_id, total_amount, order_date\n",
     "    FROM {ORDERS_PARTITIONED}\n",
     "    WHERE year = 2024 AND month = 1\n",
-    "\"\"\")\n",
-    "\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sprawdź plan - partition pruning w działaniu:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Sprawdź plan - poszukaj \"PartitionFilters\"\n",
-    "efficient_query.explain(True)\n",
-    "\n",
-    "print(\"\\n=== Porównanie: zapytanie BEZ partition pruning ===\")\n",
-    "\n",
+    "efficient_query.explain(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Porównanie: zapytanie BEZ partition pruning:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Zapytanie które nie wykorzystuje partycji (nie filtruje po roku/miesiącu)\n",
     "inefficient_query = spark.sql(f\"\"\"\n",
     "    SELECT order_id, customer_id, total_amount, order_date\n",
@@ -691,11 +782,16 @@
     "    WHERE customer_id = 1\n",
     "\"\"\")\n",
     "\n",
-    "inefficient_query.explain(True)\n",
-    "\n",
-    "print(\"\\n💡 Porównaj plany:\")\n",
-    "print(\"- Pierwszy: partition pruning aktywny (PartitionFilters)\")\n",
-    "print(\"- Drugi: brak partition pruning - czyta wszystkie partycje\")"
+    "inefficient_query.explain(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**💡 Porównaj plany:**\n",
+    "- Pierwszy: partition pruning aktywny (`PartitionFilters`)\n",
+    "- Drugi: brak partition pruning - czyta wszystkie partycje"
    ]
   },
   {
@@ -814,10 +910,22 @@
    "source": [
     "# Przykład 3.1 - Symulacja Small Files Problem\n",
     "\n",
-    "SMALL_FILES_TABLE = f\"{BRONZE_SCHEMA}.small_files_demo\"\n",
-    "\n",
-    "print(\"=== Tworzenie tabeli z małymi plikami ===\")\n",
-    "\n",
+    "SMALL_FILES_TABLE = f\"{BRONZE_SCHEMA}.small_files_demo\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Symuluj wiele małych zapisów (każdy tworzy osobny plik):**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Symuluj wiele małych zapisów (każdy tworzy osobny plik)\n",
     "for i in range(5):\n",
     "    small_batch = spark.range(i*100, (i+1)*100).select(\n",
@@ -831,9 +939,22 @@
     "        .mode(\"append\") \\\n",
     "        .saveAsTable(SMALL_FILES_TABLE)\n",
     "    \n",
-    "    print(f\"✓ Zapisano batch {i}\")\n",
-    "\n",
-    "print(\"\\n=== Sprawdzenie liczby plików ===\")\n",
+    "    print(f\"✓ Zapisano batch {i}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sprawdź liczbę plików:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "detail = spark.sql(f\"DESCRIBE DETAIL {SMALL_FILES_TABLE}\").collect()[0]\n",
     "print(f\"Liczba plików: {detail['numFiles']}\")\n",
     "print(f\"Rozmiar tabeli: {detail['sizeInBytes']} bytes\")\n",
@@ -929,20 +1050,44 @@
    "source": [
     "# Przykład 3.2 - Rozwiązanie Small Files Problem\n",
     "\n",
-    "print(\"=== Rozwiązanie: OPTIMIZE ===\")\n",
-    "\n",
     "# Wykonaj OPTIMIZE na tabeli z małymi plikami\n",
-    "spark.sql(f\"OPTIMIZE {SMALL_FILES_TABLE}\")\n",
-    "\n",
+    "spark.sql(f\"OPTIMIZE {SMALL_FILES_TABLE}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sprawdź stan po OPTIMIZE:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Sprawdź stan po OPTIMIZE\n",
     "detail_after = spark.sql(f\"DESCRIBE DETAIL {SMALL_FILES_TABLE}\").collect()[0]\n",
     "print(f\"\\nPo OPTIMIZE:\")\n",
     "print(f\"Liczba plików: {detail_after['numFiles']}\")\n",
     "print(f\"Rozmiar tabeli: {detail_after['sizeInBytes']} bytes\")\n",
-    "print(f\"Średni rozmiar pliku: {detail_after['sizeInBytes'] / detail_after['numFiles']:.0f} bytes\")\n",
-    "\n",
-    "print(\"\\n=== Konfiguracja Auto Compaction ===\")\n",
-    "\n",
+    "print(f\"Średni rozmiar pliku: {detail_after['sizeInBytes'] / detail_after['numFiles']:.0f} bytes\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Włącz Auto Compaction dla przyszłych zapisów:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Włącz auto compaction dla przyszłych zapisów\n",
     "spark.sql(f\"\"\"\n",
     "    ALTER TABLE {SMALL_FILES_TABLE}\n",
@@ -952,8 +1097,22 @@
     "    )\n",
     "\"\"\")\n",
     "\n",
-    "print(\"✓ Auto Compaction włączony\")\n",
-    "\n",
+    "print(\"✓ Auto Compaction włączony\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sprawdź włączone właściwości Auto Compaction:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Sprawdź właściwości tabeli\n",
     "properties = spark.sql(f\"SHOW TBLPROPERTIES {SMALL_FILES_TABLE}\").collect()\n",
     "auto_props = [p for p in properties if 'autoOptimize' in p['key']]\n",
@@ -1132,8 +1291,6 @@
    "source": [
     "# Przykład 4.1 - ZORDER BY\n",
     "\n",
-    "print(\"=== Wykonanie ZORDER BY ===\")\n",
-    "\n",
     "# Załóżmy, że często filtrujemy podle customer_id i order_date\n",
     "# Wykonaj ZORDER BY na tych kolumnach\n",
     "spark.sql(f\"\"\"\n",
@@ -1185,32 +1342,62 @@
     "\n",
     "import time\n",
     "\n",
-    "print(\"=== Test skuteczności ZORDER BY ===\")\n",
-    "\n",
     "# Zapytanie wykorzystujące kolumny z ZORDER\n",
     "test_query = spark.sql(f\"\"\"\n",
     "    SELECT COUNT(*), AVG(total_amount)\n",
     "    FROM {ORDERS_DELTA}\n",
     "    WHERE customer_id BETWEEN 100 AND 200\n",
     "    AND order_date >= '2024-01-01'\n",
-    "\"\"\")\n",
-    "\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Pomiar czasu wykonania:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Pomiar czasu wykonania\n",
     "start_time = time.time()\n",
     "result = test_query.collect()\n",
     "end_time = time.time()\n",
     "\n",
     "print(f\"Wynik: {result[0]}\")\n",
-    "print(f\"Czas wykonania: {end_time - start_time:.2f} sekund\")\n",
-    "\n",
+    "print(f\"Czas wykonania: {end_time - start_time:.2f} sekund\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Plan zapytania - sprawdź data skipping:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Sprawdź plan zapytania - data skipping\n",
-    "print(\"\\n=== Plan zapytania (sprawdź data skipping) ===\")\n",
-    "test_query.explain(True)\n",
-    "\n",
-    "print(\"\\n💡 W planie szukaj:\")\n",
-    "print(\"- 'numFilesTotal' vs 'numFilesSelected' - ile plików pominięto\")\n",
-    "print(\"- 'metadata time' - czas parsowania metadanych\")\n",
-    "print(\"- 'files pruned' - data skipping statistics\")"
+    "test_query.explain(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**💡 W planie szukaj:**\n",
+    "- `numFilesTotal` vs `numFilesSelected` - ile plików pominięto\n",
+    "- `metadata time` - czas parsowania metadanych\n",
+    "- `files pruned` - data skipping statistics"
    ]
   },
   {
@@ -1258,6 +1445,123 @@
     "- `numFilesTotal` vs `numFilesSelected` - ile plików pominięto\n",
     "- `metadata time` - czas parsowania metadanych  \n",
     "- `files pruned` - data skipping statistics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sekcja 5: Liquid Clustering - Przyszłość optymalizacji\n",
+    "\n",
+    "**Cel sekcji:** Poznanie Liquid Clustering - nowoczesnej techniki zastępującej Hive Partitioning i ZORDER.\n",
+    "\n",
+    "**Co to jest Liquid Clustering?**\n",
+    "To elastyczny mechanizm układania danych, który:\n",
+    "- Nie wymaga sztywnej struktury katalogów (jak Partitioning)\n",
+    "- Pozwala na zmianę kluczy klastrowania bez przepisywania całej tabeli\n",
+    "- Eliminuje problem \"Small Files\" związany z nadmiernym partycjonowaniem\n",
+    "- Działa inkrementalnie (nie trzeba optymalizować całej tabeli na raz)\n",
+    "\n",
+    "**Kiedy używać?**\n",
+    "- Zamiast partycjonowania dla większości nowych tabel\n",
+    "- Gdy klucze partycjonowania mają wysoką kardynalność\n",
+    "- Gdy wzorce zapytań zmieniają się w czasie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Przykład 5.1 - Włączenie Liquid Clustering\n",
+    "\n",
+    "LIQUID_TABLE = f\"{BRONZE_SCHEMA}.orders_liquid\"\n",
+    "\n",
+    "# Tworzymy tabelę używając CLUSTER BY zamiast PARTITIONED BY\n",
+    "spark.sql(f\"\"\"\n",
+    "CREATE TABLE {LIQUID_TABLE}\n",
+    "CLUSTER BY (customer_id, order_date)\n",
+    "AS SELECT * FROM {ORDERS_DELTA}\n",
+    "\"\"\")\n",
+    "\n",
+    "print(f\"✓ Tabela {LIQUID_TABLE} utworzona z Liquid Clustering\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sprawdź właściwości tabeli:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sprawdź właściwości tabeli\n",
+    "display(spark.sql(f\"DESCRIBE DETAIL {LIQUID_TABLE}\").select(\"name\", \"clusteringColumns\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Przykład 5.2: Inkrementalna optymalizacja\n",
+    "\n",
+    "**Teoria:**\n",
+    "W przeciwieństwie do ZORDER, który musi przeliczyć całą partycję/tabelę, Liquid Clustering działa inkrementalnie. `OPTIMIZE` uporządkuje tylko te dane, które tego wymagają (np. nowo dodane), co oszczędza czas i zasoby."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Przykład 5.2 - Inkrementalna optymalizacja\n",
+    "\n",
+    "# Uruchom OPTIMIZE - zauważ brak klauzuli ZORDER BY\n",
+    "# Liquid Clustering wie jak układać dane na podstawie definicji tabeli\n",
+    "spark.sql(f\"OPTIMIZE {LIQUID_TABLE}\")\n",
+    "\n",
+    "print(\"✓ Optymalizacja zakończona\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sprawdź historię, aby zobaczyć operację CLUSTERING:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sprawdź historię, aby zobaczyć operację CLUSTERING\n",
+    "display(spark.sql(f\"DESCRIBE HISTORY {LIQUID_TABLE}\").select(\"version\", \"operation\", \"operationParameters\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Porównanie: Liquid Clustering vs Partitioning + ZORDER\n",
+    "\n",
+    "| Cecha | Partitioning + ZORDER | Liquid Clustering |\n",
+    "|-------|-----------------------|-------------------|\n",
+    "| **Konfiguracja** | Wymaga starannego doboru kolumn partycjonowania | Elastyczne `CLUSTER BY` |\n",
+    "| **Small Files** | Ryzyko przy nadmiernym partycjonowaniu | Automatycznie zarządzane |\n",
+    "| **Zmiana klucza** | Trudna (wymaga przepisania tabeli) | Łatwa (`ALTER TABLE CLUSTER BY`) |\n",
+    "| **Optymalizacja** | `OPTIMIZE ZORDER BY` (kosztowne) | `OPTIMIZE` (inkrementalne) |\n",
+    "| **Skew Data** | Podatne na data skew | Odporne na data skew |\n",
+    "\n",
+    "**Rekomendacja:** Używaj Liquid Clustering dla wszystkich nowych tabel w Databricks Runtime 13.3+, chyba że masz specyficzny powód, by używać partycjonowania (np. kompatybilność ze starszymi czytnikami)."
    ]
   },
   {
@@ -1468,6 +1772,7 @@
     "\n",
     "# spark.sql(f\"DROP TABLE IF EXISTS {ORDERS_PARTITIONED}\")\n",
     "# spark.sql(f\"DROP TABLE IF EXISTS {SMALL_FILES_TABLE}\")\n",
+    "# spark.sql(f\"DROP TABLE IF EXISTS {LIQUID_TABLE}\")\n",
     "\n",
     "# print(\"✓ Tabele demo usunięte\")\n",
     "\n",
