--- a/DZIEN_3_Transformation_Governance_Integrations/03_databricks_jobs_orchestration.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/03_databricks_jobs_orchestration.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "---\n",
     "\n",
-    "## 📚 Agenda\n",
+    "## Agenda\n",
     "\n",
     "1. Wprowadzenie do Databricks Jobs\n",
     "2. Multi-task Jobs i zależności\n",
@@ -22,7 +22,7 @@
     "\n",
     "---\n",
     "\n",
-    "## 🎯 Cele szkolenia\n",
+    "## Cele szkolenia\n",
     "\n",
     "Po tym module będziesz potrafić:\n",
     "- Tworzyć multi-task Databricks Jobs\n",
@@ -39,7 +39,7 @@
    "id": "d7b08a70",
    "metadata": {},
    "source": [
-    "## 1️⃣ Wprowadzenie do Databricks Jobs\n",
+    "## 1. Wprowadzenie do Databricks Jobs\n",
     "\n",
     "**Databricks Jobs** to zarządzany service orkiestracji dla:\n",
     "- ETL/ELT pipelines\n",
@@ -73,7 +73,7 @@
    "id": "342c985b",
    "metadata": {},
    "source": [
-    "## 2️⃣ Multi-task Jobs i zależności\n",
+    "## 2. Multi-task Jobs i zależności\n",
     "\n",
     "### Podstawowa struktura Job:\n",
     "\n",
@@ -202,7 +202,7 @@
    "id": "004dc98e",
    "metadata": {},
    "source": [
-    "## 3️⃣ Task Types: Notebook, DLT, SQL, dbt\n",
+    "## 3. Task Types: Notebook, DLT, SQL, dbt\n",
     "\n",
     "### 1. Notebook Task\n",
     "\n",
@@ -271,7 +271,7 @@
     "    \"target_table\": target_table\n",
     "})\n",
     "\n",
-    "print(f\"✅ Ingested {row_count} rows to {target_table}\")"
+    "print(f\"Ingested {row_count} rows to {target_table}\")"
    ]
   },
   {
@@ -392,7 +392,7 @@
    "source": [
     "---\n",
     "\n",
-    "## 4️⃣ Parametryzacja i Widgets\n",
+    "## 4. Parametryzacja i Widgets\n",
     "\n",
     "### Passing parameters między taskami:\n",
     "\n",
@@ -529,7 +529,7 @@
    "source": [
     "---\n",
     "\n",
-    "## 5️⃣ Monitoring, Alerting i Retry Logic\n",
+    "## 5. Monitoring, Alerting i Retry Logic\n",
     "\n",
     "### Retry Logic:"
    ]
@@ -656,7 +656,7 @@
     "\n",
     "# Alert if quality threshold exceeded\n",
     "if null_percentage > 5:\n",
-    "    error_msg = f\"⚠️ Data quality issue: {null_percentage:.2f}% null order_ids\"\n",
+    "    error_msg = f\"Data quality issue: {null_percentage:.2f}% null order_ids\"\n",
     "    print(error_msg)\n",
     "    \n",
     "    # Log to monitoring table\n",
@@ -676,7 +676,7 @@
     "    # Fail the job\n",
     "    raise Exception(error_msg)\n",
     "\n",
-    "print(f\"✅ Quality check passed: {null_percentage:.2f}% null order_ids\")"
+    "print(f\"Quality check passed: {null_percentage:.2f}% null order_ids\")"
    ]
   },
   {
@@ -754,7 +754,7 @@
    "source": [
     "---\n",
     "\n",
-    "## 6️⃣ Best Practices dla produkcyjnych Jobs\n",
+    "## 6. Best Practices dla produkcyjnych Jobs\n",
     "\n",
     "### 1. Cluster Strategy:"
    ]
@@ -828,7 +828,7 @@
     "    \n",
     "except AssertionError as e:\n",
     "    # Data validation failure\n",
-    "    print(f\"❌ Validation Error: {str(e)}\")\n",
+    "    print(f\"Validation Error: {str(e)}\")\n",
     "    dbutils.notebook.exit(json.dumps({\n",
     "        \"status\": \"FAILED\",\n",
     "        \"error_type\": \"VALIDATION_ERROR\",\n",
@@ -837,7 +837,7 @@
     "    \n",
     "except Exception as e:\n",
     "    # Unexpected error\n",
-    "    print(f\"❌ Unexpected Error: {str(e)}\")\n",
+    "    print(f\"Unexpected Error: {str(e)}\")\n",
     "    import traceback\n",
     "    traceback.print_exc()\n",
     "    dbutils.notebook.exit(json.dumps({\n",
@@ -865,26 +865,50 @@
     "# Best Practice: Idempotent operations\n",
     "# Job powinien móc być uruchomiony wielokrotnie bez side effects\n",
     "\n",
-    "# ❌ BAD: Non-idempotent\n",
+    "# BAD: Non-idempotent\n",
     "# df.write.format(\"delta\").mode(\"append\").saveAsTable(\"target\")\n",
-    "# ^ Re-running duplicates data\n",
-    "\n",
-    "# ✅ GOOD: Idempotent with overwrite\n",
-    "df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"target\")\n",
-    "\n",
-    "# ✅ GOOD: Idempotent with MERGE\n",
+    "# ^ Re-running duplicates data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71ceeac6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GOOD: Partition-specific overwrite\n",
+    "df.write.format(\"delta\").mode(\"overwrite\") \\\n",
+    "    .option(\"replaceWhere\", \"order_date = '2024-01-15'\") \\\n",
+    "    .saveAsTable(\"target\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f46a9081",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GOOD: Idempotent with MERGE\n",
     "from delta.tables import DeltaTable\n",
     "\n",
     "target_table = DeltaTable.forName(spark, \"target\")\n",
     "target_table.alias(\"target\").merge(\n",
     "    df.alias(\"source\"),\n",
     "    \"target.order_id = source.order_id\"\n",
-    ").whenMatchedUpdateAll().whenNotMatchedInsertAll().execute()\n",
-    "\n",
-    "# ✅ GOOD: Partition-specific overwrite\n",
-    "df.write.format(\"delta\").mode(\"overwrite\") \\\n",
-    "    .option(\"replaceWhere\", \"order_date = '2024-01-15'\") \\\n",
-    "    .saveAsTable(\"target\")"
+    ").whenMatchedUpdateAll().whenNotMatchedInsertAll().execute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3678190c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GOOD: Idempotent with overwrite\n",
+    "df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"target\")"
    ]
   },
   {
@@ -991,7 +1015,7 @@
    "source": [
     "---\n",
     "\n",
-    "## 🔨 Kompletny przykład: Production-ready Multi-task Job\n",
+    "## Kompletny przykład: Production-ready Multi-task Job\n",
     "\n",
     "### Scenario: Daily Orders ETL Pipeline\n",
     "```\n",
@@ -1134,7 +1158,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "print(\"✅ Production Job configuration complete!\")"
+    "print(\"Production Job configuration complete!\")"
    ]
   },
   {
@@ -1144,17 +1168,17 @@
    "source": [
     "---\n",
     "\n",
-    "## ✅ Podsumowanie\n",
+    "## Podsumowanie\n",
     "\n",
     "### Nauczyłeś się:\n",
     "\n",
-    "✅ **Multi-task Jobs**: DAG-based workflow orchestration  \n",
-    "✅ **Task Types**: Notebook, SQL, DLT, dbt tasks  \n",
-    "✅ **Dependencies**: Sequential, parallel, fan-out/fan-in patterns  \n",
-    "✅ **Parametryzacja**: Job parameters, task values, dynamic values  \n",
-    "✅ **Monitoring**: Email, webhooks, custom metrics  \n",
-    "✅ **Retry Logic**: Automatic retry dla transient errors  \n",
-    "✅ **Best Practices**: Idempotency, error handling, cost optimization  \n",
+    "- **Multi-task Jobs**: DAG-based workflow orchestration  \n",
+    "- **Task Types**: Notebook, SQL, DLT, dbt tasks  \n",
+    "- **Dependencies**: Sequential, parallel, fan-out/fan-in patterns  \n",
+    "- **Parametryzacja**: Job parameters, task values, dynamic values  \n",
+    "- **Monitoring**: Email, webhooks, custom metrics  \n",
+    "- **Retry Logic**: Automatic retry dla transient errors  \n",
+    "- **Best Practices**: Idempotency, error handling, cost optimization  \n",
     "\n",
     "### Key Takeaways:\n",
     "\n",
@@ -1170,7 +1194,7 @@
     "\n",
     "---\n",
     "\n",
-    "## 📚 Dodatkowe zasoby\n",
+    "## Dodatkowe zasoby\n",
     "\n",
     "- [Databricks Jobs Documentation](https://docs.databricks.com/workflows/jobs/jobs.html)\n",
     "- [Jobs API Reference](https://docs.databricks.com/api/workspace/jobs)\n",
