--- a/DZIEN_3_Transformation_Governance_Integrations/04_unity_catalog_governance.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/04_unity_catalog_governance.ipynb
@@ -478,8 +478,22 @@
     "spark.sql(f\"\"\"\n",
     "    CREATE CATALOG IF NOT EXISTS {CATALOG}\n",
     "    COMMENT 'Katalog KION dla danych szkoleniowych'\n",
-    "\"\"\")\n",
-    "\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Weryfikacja listy katalogów:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# List catalogs\n",
     "spark.sql(\"SHOW CATALOGS\").display()"
    ]
@@ -491,16 +505,6 @@
     "**Katalog utworzony/zweryfikowany**\n",
     "\n",
     "Katalog służy jako top-level container dla wszystkich schematów i tabel w naszym środowisku szkoleniowym."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Lista katalogów\n",
-    "spark.sql(\"SHOW CATALOGS\").display()"
    ]
   },
   {
@@ -570,8 +574,22 @@
    "source": [
     "# Ustawienie default catalog i schema\n",
     "spark.sql(f\"USE CATALOG {CATALOG}\")\n",
-    "spark.sql(f\"USE SCHEMA {SILVER_SCHEMA}\")\n",
-    "\n",
+    "spark.sql(f\"USE SCHEMA {SILVER_SCHEMA}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Weryfikacja aktywnego kontekstu:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Verify the active catalog and schema\n",
     "print(f\"✓ Aktywny katalog: {CATALOG}\")\n",
     "print(f\"✓ Aktywny schemat: {SILVER_SCHEMA}\")\n",
@@ -693,8 +711,22 @@
     "    .option(\"mergeSchema\", \"true\") \\\n",
     "    .saveAsTable(f\"{CATALOG}.{BRONZE_SCHEMA}.orders\")\n",
     "\n",
-    "print(f\"✓ Tabela orders zapisana w {CATALOG}.{BRONZE_SCHEMA}\")\n",
-    "\n",
+    "print(f\"✓ Tabela orders zapisana w {CATALOG}.{BRONZE_SCHEMA}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Weryfikacja tabeli orders:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Weryfikacja\n",
     "result = spark.sql(f\"SELECT COUNT(*) as count FROM {CATALOG}.{BRONZE_SCHEMA}.orders\").collect()[0]\n",
     "print(f\"✓ Liczba rekordów: {result.count}\")"
@@ -797,6 +829,66 @@
    "source": [
     "# Weryfikacja liczby rekordów products\n",
     "spark.sql(f\"SELECT COUNT(*) as count FROM {CATALOG}.{BRONZE_SCHEMA}.products\").display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2 Data Classification (Tagging)\n",
+    "\n",
+    "**Tagging** pozwala na klasyfikację danych (np. PII, Sensitive, GDPR) na poziomie tabeli lub kolumny.\n",
+    "Ułatwia to data discovery oraz governance (np. raportowanie wszystkich tabel zawierających dane osobowe).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dodaj tagi do tabeli orders\n",
+    "spark.sql(f\"\"\"\n",
+    "    ALTER TABLE {CATALOG}.{BRONZE_SCHEMA}.orders \n",
+    "    SET TAGS ('sensitivity' = 'high', 'domain' = 'sales')\n",
+    "\"\"\")\n",
+    "\n",
+    "# Dodaj tagi do kolumny customer_id\n",
+    "spark.sql(f\"\"\"\n",
+    "    ALTER TABLE {CATALOG}.{BRONZE_SCHEMA}.orders \n",
+    "    ALTER COLUMN customer_id SET TAGS ('pii' = 'true')\n",
+    "\"\"\")\n",
+    "\n",
+    "print(\"✓ Tagi dodane do tabeli i kolumny\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Wyszukiwanie po tagach (Information Schema):**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Znajdź wszystkie kolumny oznaczone jako PII\n",
+    "pii_columns = spark.sql(f\"\"\"\n",
+    "    SELECT \n",
+    "        catalog_name, \n",
+    "        schema_name, \n",
+    "        table_name, \n",
+    "        column_name, \n",
+    "        tag_value \n",
+    "    FROM system.information_schema.column_tags\n",
+    "    WHERE tag_name = 'pii' AND tag_value = 'true'\n",
+    "      AND catalog_name = '{CATALOG}'\n",
+    "\"\"\")\n",
+    "\n",
+    "display(pii_columns)"
    ]
   },
   {
@@ -1147,8 +1239,22 @@
     "  LEFT JOIN {CATALOG}.{BRONZE_SCHEMA}.orders o\n",
     "    ON c.customer_id = o.customer_id\n",
     "  GROUP BY c.customer_id, c.first_name, c.last_name, c.country\n",
-    "\"\"\")\n",
-    "\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Weryfikacja utworzenia View:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(f\"✓ View customer_order_summary utworzony w {CATALOG}.{SILVER_SCHEMA}\")"
    ]
   },
@@ -1202,6 +1308,25 @@
     "- Można nadać uprawnienia na konkretnym poziomie dla fine-grained control\n",
     "\n",
     "### Przykłady GRANT/REVOKE:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup: Create groups for demonstration purposes\n",
+    "# Note: This requires account admin privileges. If you don't have them, ensure these groups exist.\n",
+    "try:\n",
+    "    spark.sql(\"CREATE GROUP IF NOT EXISTS `data-analysts`\")\n",
+    "    spark.sql(\"CREATE GROUP IF NOT EXISTS `data-engineers`\")\n",
+    "    spark.sql(\"CREATE GROUP IF NOT EXISTS `finance-team`\")\n",
+    "    spark.sql(\"CREATE GROUP IF NOT EXISTS `marketing-team`\")\n",
+    "    print(\"✓ Groups created or already exist\")\n",
+    "except Exception as e:\n",
+    "    print(f\"⚠️ Could not create groups (likely due to permissions): {e}\")\n",
+    "    print(\"Please ensure these groups exist in your Databricks Account or use existing groups.\")"
    ]
   },
   {
@@ -1267,19 +1392,47 @@
    "outputs": [],
    "source": [
     "# Grant full access to data engineers\n",
-    "spark.sql(\"\"\"\n",
-    "    GRANT USE CATALOG, CREATE SCHEMA ON CATALOG kion_prod TO `data-engineers`\n",
-    "\"\"\")\n",
-    "\n",
-    "# GRANT dla data-engineers na Gold schema\n",
+    "spark.sql(f\"\"\"\n",
+    "    GRANT USE CATALOG, CREATE SCHEMA ON CATALOG {CATALOG} TO `data-engineers`\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Uprawnienia dla Data Analysts (Gold Layer):**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GRANT dla data-analysts na Gold schema\n",
     "spark.sql(f\"\"\"\n",
     "  GRANT USE SCHEMA ON SCHEMA {CATALOG}.{GOLD_SCHEMA} TO `data-analysts`\n",
     "\"\"\")\n",
     "\n",
     "spark.sql(f\"\"\"\n",
     "  GRANT SELECT ON SCHEMA {CATALOG}.{GOLD_SCHEMA} TO `data-analysts`\n",
-    "\"\"\")\n",
-    "\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Pełne uprawnienia dla Data Engineers:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# GRANT ALL PRIVILEGES dla data-engineers\n",
     "spark.sql(f\"\"\"\n",
     "  GRANT ALL PRIVILEGES ON SCHEMA {CATALOG}.{BRONZE_SCHEMA} TO `data-engineers`\n",
@@ -1329,23 +1482,14 @@
     "\n",
     "spark.sql(f\"\"\"\n",
     "    GRANT SELECT ON TABLE {CATALOG}.{GOLD_SCHEMA}.customers_masked TO `marketing-team`\n",
-    "\"\"\")\n",
-    "\n",
-    "# 4. GRANT ALL PRIVILEGES dla data-engineers\n",
-    "spark.sql(f\"\"\"\n",
-    "  GRANT ALL PRIVILEGES ON SCHEMA {CATALOG}.{BRONZE_SCHEMA} TO `data-engineers`\n",
-    "\"\"\")\n",
-    "\n",
-    "spark.sql(f\"\"\"\n",
-    "  GRANT ALL PRIVILEGES ON SCHEMA {CATALOG}.{SILVER_SCHEMA} TO `data-engineers`\n",
-    "\"\"\")\n",
-    "\n",
-    "spark.sql(f\"\"\"\n",
-    "  GRANT ALL PRIVILEGES ON SCHEMA {CATALOG}.{GOLD_SCHEMA} TO `data-engineers`\n",
-    "\"\"\")\n",
-    "\n",
-    "print(\"✅ Granted table-specific access\")\n",
-    "print(f\"✓ Grupa 'data-engineers' ma ALL PRIVILEGES na Bronze/Silver/Gold\")"
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Weryfikacja nadania uprawnień:**"
    ]
   },
   {
@@ -1705,25 +1849,6 @@
    },
    "outputs": [],
    "source": [
-    "# RLS based on user attribute (e.g., department)\n",
-    "spark.sql(\"\"\"\n",
-    "    CREATE OR REPLACE VIEW kion_prod.gold.sales_rls AS\n",
-    "    SELECT \n",
-    "        o.*,\n",
-    "        d.department\n",
-    "    FROM kion_prod.silver.orders o\n",
-    "    JOIN kion_prod.silver.departments d ON o.department_id = d.department_id\n",
-    "    WHERE \n",
-    "        is_account_group_member('admin') OR\n",
-    "        current_user() IN (\n",
-    "            SELECT user_email \n",
-    "            FROM kion_prod.gold.user_department_mapping \n",
-    "            WHERE department = d.department\n",
-    "        )\n",
-    "\"\"\")\n",
-    "\n",
-    "# Users only see sales from their own department\n",
-    "\n",
     "# RLS na zamówieniach - filtrowanie per rola\n",
     "spark.sql(f\"\"\"\n",
     "  CREATE OR REPLACE VIEW {CATALOG}.{GOLD_SCHEMA}.orders_rls AS\n",
@@ -1735,6 +1860,13 @@
     "    (is_account_group_member('finance-team') AND o.status IN ('completed', 'shipped')) OR\n",
     "    (is_account_group_member('warehouse-team') AND o.status IN ('pending', 'processing', 'shipped'))\n",
     "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Nadanie uprawnień do RLS Views:**"
    ]
   },
   {
@@ -1769,15 +1901,44 @@
    },
    "outputs": [],
    "source": [
-    "# GRANT dostęp do RLS Views\n",
+    "# GRANT dostęp do customers_rls\n",
     "spark.sql(f\"\"\"\n",
     "  GRANT SELECT ON VIEW {CATALOG}.{GOLD_SCHEMA}.customers_rls TO `all-users`\n",
-    "\"\"\")\n",
-    "\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Nadanie uprawnień do orders_rls**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GRANT dostęp do orders_rls\n",
     "spark.sql(f\"\"\"\n",
     "  GRANT SELECT ON VIEW {CATALOG}.{GOLD_SCHEMA}.orders_rls TO `all-users`\n",
-    "\"\"\")\n",
-    "\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Odebranie dostępu do tabel bazowych (Enforcement):**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Revoke direct access to base table\n",
     "spark.sql(f\"\"\"\n",
     "    REVOKE SELECT ON TABLE {CATALOG}.{BRONZE_SCHEMA}.orders FROM `all-users`\n",
@@ -1825,6 +1986,13 @@
     "- Notebook → Table (data writes)\n",
     "- Dashboard → Table (BI queries)\n",
     "- ML Model → Table (training data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**General Table Lineage**"
    ]
   },
   {
@@ -1879,6 +2047,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1. Upstream Lineage (Sources)**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -1918,6 +2093,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2. Downstream Lineage (Consumers)**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -1954,6 +2136,13 @@
     "**⬇️ Downstream: Views/Tables korzystające z customers**\n",
     "\n",
     "Pokazuje wszystkie Views i tabele, które konsumują dane z tabeli `customers`. Krytyczne dla understanding impact of changes i data governance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3. Column-Level Lineage**"
    ]
   },
   {
@@ -2021,6 +2210,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1. General Audit Logs**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -2055,6 +2251,13 @@
     "    LIMIT 100\n",
     "\"\"\")\n",
     "audit_df.display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2. Sensitive Data Access**"
    ]
   },
   {
@@ -2107,6 +2310,13 @@
     "- **Skąd**: Source IP address\n",
     "\n",
     "Kluczowe dla compliance (GDPR, HIPAA) i security monitoring."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3. Privilege Changes**"
    ]
   },
   {
@@ -2443,24 +2653,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "fff99eff-f567-4692-b3fc-0e12957ef6fb",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Regular governance health checks\n",
-    "\n",
     "# 1. Tabele bez właścicieli\n",
     "unowned_tables = spark.sql(f\"\"\"\n",
     "    SELECT \n",
@@ -2472,44 +2668,7 @@
     "        AND table_owner IS NULL\n",
     "\"\"\")\n",
     "\n",
-    "display(unowned_tables)\n",
-    "print(\"⚠️ Tabele bez właścicieli (powinny mieć przypisanego owner)\")\n",
-    "\n",
-    "# 2. Tables without comments\n",
-    "undocumented = spark.sql(f\"\"\"\n",
-    "    SELECT \n",
-    "        table_catalog,\n",
-    "        table_schema,\n",
-    "        table_name\n",
-    "    FROM system.information_schema.tables\n",
-    "    WHERE table_catalog = '{CATALOG}'\n",
-    "        AND (comment IS NULL OR comment = '')\n",
-    "\"\"\")\n",
-    "\n",
-    "display(undocumented)\n",
-    "print(\"📝 Tabele bez dokumentacji (dodaj COMMENT ON TABLE)\")\n",
-    "\n",
-    "# 3. Unused tables (no queries in 90 days)\n",
-    "unused_tables = spark.sql(f\"\"\"\n",
-    "    WITH recent_access AS (\n",
-    "        SELECT DISTINCT request_params.full_name_arg as table_name\n",
-    "        FROM system.access.audit\n",
-    "        WHERE action_name = 'getTable'\n",
-    "            AND event_date >= current_date() - INTERVAL 90 DAYS\n",
-    "    )\n",
-    "    SELECT \n",
-    "        t.table_catalog,\n",
-    "        t.table_schema,\n",
-    "        t.table_name,\n",
-    "        t.created as table_created_at\n",
-    "    FROM system.information_schema.tables t\n",
-    "    LEFT JOIN recent_access ra \n",
-    "        ON CONCAT(t.table_catalog, '.', t.table_schema, '.', t.table_name) = ra.table_name\n",
-    "    WHERE t.table_catalog = '{CATALOG}'\n",
-    "        AND ra.table_name IS NULL\n",
-    "        AND t.created < current_date() - INTERVAL 90 DAYS\n",
-    "\"\"\")\n",
-    "unused_tables.display()"
+    "display(unowned_tables)"
    ]
   },
   {
